# cephalon-rs

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
cephalon/: Cargo.toml
cephalon/src/: document.rs  knowledge_base.rs  lib.rs  main.rs  model.rs  vectordb.rs
cephalon/src/database/: hora.rs  mod.rs  sql_database.rs  vectordb.rs
cephalon/src/documents/: document.rs  mod.rs
cephalon/src/models/: mod.rs  model.rs  summarize_model.rs
cephalon/tests/: test.rs
cephalon/tests/test_resources/: word-docx-sample.docx
