[package]
name = "cephalon"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.3.4",features=["derive"]}
hora = "0.1.1"
minidom = "0.15.2"
pdf-extract = "0.6.5"
pyo3 = "0.19.0"
rayon = "1.7.0"
rusqlite = {version="0.29.0",features=["bundled"]}
rust-bert = "0.21.0"
serde = "1.0.164"
tch = "0.13.0"
zip = "0.6.6"
