[package]
name = "cephalon"
version = "0.0.8"
edition = "2021"
authors=["Sagar <sagar.patel@maruti.io>"]
rust-version="1.70"
description="A library to extract information from documents, and feed it into vector database to create robust knowledge-base assistant."
readme="../README.md"
repository="https://github.com/Maruti-io/cephalon-rs"
license="MIT"
keywords=["vector-database","knowledge-base","assistant","NLP"]
categories=["command-line-utilities"]
documentation="https://docs.rs/cephalon/latest/cephalon/"
exclude=["tests"]

[[main]]
name="cephalon"

[lib]
name="cephalon"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.3.4",features=["derive"]}
hora = "0.1.1"
minidom = "0.15.2"
pdf-extract = "0.6.5"
rayon = "1.7.0"
rusqlite = {version="0.29.0",features=["bundled"]}
rust-bert = {version="0.21.0",optional=true}
serde = "1.0.164"
tch = {version="0.13.0",features=["download-libtorch"], optional=true}
zip = "0.6.6"

[features]
default=["rust-bert", "tch"]
doc-only = ["tch/doc-only"]
no-ml=[]

[package.metadata.docs.rs]
features = ["doc-only"]
